Added constants, hex output, and reversed/flipped bits

--- a/Better_Bits/Better_Bits.vcxproj.filters
+++ b/Better_Bits/Better_Bits.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="BetterBits.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Constants.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HexOutputModifier.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -36,6 +42,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BetterBits.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Constants.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="HexOutputModifier.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
