--- a/Better_Bits/Better_Bits.vcxproj
+++ b/Better_Bits/Better_Bits.vcxproj
@@ -152,13 +152,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BinaryOutputModifier.hpp" />
+    <ClInclude Include="Constants.hpp" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="BetterBits.hpp" />
+    <ClInclude Include="HexOutputModifier.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BetterBits.cpp" />
     <ClCompile Include="BinaryOutputModifier.cpp" />
+    <ClCompile Include="Constants.cpp" />
+    <ClCompile Include="HexOutputModifier.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
