--- a/Better_Bits_Tester/Better_Bits_Tester.vcxproj
+++ b/Better_Bits_Tester/Better_Bits_Tester.vcxproj
@@ -151,7 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Better_Bits_Tester.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
