--- a/Better_Bits/Better_Bits.vcxproj.filters
+++ b/Better_Bits/Better_Bits.vcxproj.filters
@@ -33,15 +33,15 @@
     <ClInclude Include="HexOutputModifier.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Counters.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BinaryOutputModifier.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="BetterBits.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Constants.cpp">
